2003-04-21  Serg Stoyan <stoyan@hologr.com>

	* Source/NSMenuView.m:
	(mouseDown:): Generate periodic events every 0.01 seconds.
	
2003-04-17  Serg Stoyan <stoyan@hologr.com>

	* Source/NSMenuItemCell.m:
	(setMenuView:): Removed setting image position and
	_mcell_belongs_to_popupbutton ivar for popup button cell.
	(calcSize): Removed code from setMenuView placed here.
	
2003-04-13 Michael Hanni  <michael@deviant-behavior.com>

	* Images/common_WMCloseBroken.tiff,common_WMClose.tiff: remove 
	background of image.

Mon Apr 14 14:24:27 2003  Nicola Pero  <n.pero@mi.flashnet.it>

	* Headers/gnustep/gui/AppKit.h: Include NSDocument.h

2003-04-14  Serg Stoyan <stoyan@hologr.com>

	* Source/NSApplication.m:
	(setImageForWindowsItem:): Do not add "X" image if window has 
	no close button.
	
2003-04-13 Michael Hanni  <michael@deviant-behavior.com>

	* Source/NSProgressIndicator.m: revert last change.
	* Source/NSInterfaceStyle.m: revert last change.
	* Headers/NSInterfaceStyle.h: revert last change.

2003-04-13 Michael Hanni  <michael@deviant-behavior.com>

	Multiple outstanding commits.

	* ColorPickers/GSWheelColorPicker.m:
	(mouseDown:): Implemented new event loop that really speeds things 
	up on slow machines.
	* Source/NSScroller.m:
	(init): Decreased periodic delay for scroller buttons.
	(trackKnob:): Implemented new event loop to improve speed. Added 
	code to "snap" back the scroller when you release the alternate 
	key in mid-scroll (modeled after OS 4.2 behavior.)
	(trackScrollButtons:): Removed event loop as we weren't using it 
	anyways.
	* Source/NSFontPanel.m:
	(_trySelectSize:): Put size textfield update code here, make sure 
	column is loaded.
	(_familySelectionChanged:): Call _trySelectSize: to update the 
	size column just like we do for the face browser.
	* Source/NSProgressIndicator.m:
	(drawRect:): Implement GSGtkInterfaceStyle for 
	NSProgressIndicatorInterfaceStyle.
	* Source/NSInterfaceStyle.m: added GSGtkInterfaceStyle.