@@ -1,3 +1,8 @@
+2003-04-25  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/NSSavePanel.m: Track window resizing and adjust browser
+	columns to match.  Use larger minimum width.
+
 2003-04-21  Serg Stoyan <stoyan@hologr.com>
 
 	* Source/NSMenuView.m:
